// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should render with background dark 1`] = `
.c0 {
  display: block;
  margin: 0 auto;
  padding: 0 1rem;
  min-height: 100%;
  width: 360px;
  background-color: #18181b;
  color: #f4f4f5;
  border-left: 1px solid rgba(82,82,91,0.3);
  border-right: 1px solid rgba(82,82,91,0.3);
}

@media (min-width:480px) {
  .c0 {
    width: 480px;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 0 5rem;
    width: 768px;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 900px;
  }
}

@media (min-width:1320px) {
  .c0 {
    padding: 0 10rem;
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
    height="100"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;

exports[`<Container /> should render with background gray 1`] = `
.c0 {
  display: block;
  margin: 0 auto;
  padding: 0 1rem;
  min-height: 100%;
  width: 360px;
  background-color: #6b7688;
  color: #f4f4f5;
  border-left: 1px solid rgba(82,82,91,0.3);
  border-right: 1px solid rgba(82,82,91,0.3);
}

@media (min-width:480px) {
  .c0 {
    width: 480px;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 0 5rem;
    width: 768px;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 900px;
  }
}

@media (min-width:1320px) {
  .c0 {
    padding: 0 10rem;
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
    height="100"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;

exports[`<Container /> should render with background white 1`] = `
.c0 {
  display: block;
  margin: 0 auto;
  padding: 0 1rem;
  min-height: 100vh;
  width: 360px;
  background-color: #ffffff;
  color: #030303;
  border-left: 1px solid rgba(82,82,91,0.3);
  border-right: 1px solid rgba(82,82,91,0.3);
}

@media (min-width:480px) {
  .c0 {
    width: 480px;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 0 5rem;
    width: 768px;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 900px;
  }
}

@media (min-width:1320px) {
  .c0 {
    padding: 0 10rem;
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
    height="full"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;
